--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -198,6 +198,14 @@
 			<version>2.5</version>
 			<optional>true</optional><!-- EmbeddedSolrSearchServicesPlugin -->
 		</dependency>
+		
+		<!--FileManager-->
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<!-- /FileManager-->
 
 		<!--exporter-->
 		<dependency>
