--- a/pom.xml
+++ b/pom.xml
@@ -17,22 +17,16 @@ See the License for the specific language governing permissions and
 limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>io.vertigo</groupId>
+	<parent>
+		<groupId>io.vertigo</groupId>
+		<artifactId>vertigo-parent</artifactId>
+		<version>0.4.1-SNAPSHOT</version>
+		<relativePath>../vertigo-parent</relativePath>
+	</parent>
+	
 	<artifactId>vertigo-reactor</artifactId>
-	<version>0.4.1-SNAPSHOT</version>
 	<name>vertigo-reactor</name>
 	<packaging>pom</packaging>
-	<description>Vertigo is a simple java project starter</description>
-	<url>http://vertigo.io</url>
-
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
 
 	<modules>
 		<module>vertigo-parent</module>
@@ -67,7 +61,7 @@ limitations under the License. -->
 		<connection>scm:git:https://github.com/KleeGroup/vertigo.git</connection>
 		<developerConnection>scm:git:https://github.com/KleeGroup/vertigo.git</developerConnection>
 		<url>scm:git:https://github.com/KleeGroup/vertigo.git</url>
-		<tag>vertigo-0.3.1</tag>
+		<tag>vertigo-0.4.0</tag>
 	</scm>
 
 	<build>
