Update unit tests in order to generate the js file.

--- a/vertigo-studio/src/test/java/io/vertigo/studio/tools/test.properties
+++ b/vertigo-studio/src/test/java/io/vertigo/studio/tools/test.properties
@@ -1,5 +1,6 @@
 targetDir 	= target/java/
 targetGenDir= target/javagen/
+encoding = utf8
 kpr 		= io/vertigo/dynamock/generation.kpr
 generateResourcesFile 	= false
 applicationConfiguration = /META-INF/managers-mda.xml
