--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -37,9 +37,9 @@
 	
 		<!--script -->
 		<dependency>
-			<groupId>janino</groupId>
+			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
-			<version>2.5.15</version>
+			<version>2.7.6</version>
 			<optional>true</optional><!-- pour JaninoExpressionEvaluatorPlugin -->
 		</dependency>
 	</dependencies>
