--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -101,9 +101,9 @@
 		</dependency>
 		<!--script -->
 		<dependency>
-			<groupId>janino</groupId>
+			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
-			<version>2.5.15</version>
+			<version>2.7.6</version>
 			<scope>test</scope><!-- JaninoExpressionEvaluatorPlugin -->
 		</dependency>
 
