--- a/vertigo-quarto-impl/pom.xml
+++ b/vertigo-quarto-impl/pom.xml
@@ -46,9 +46,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>janino</groupId>
+			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
-			<version>2.5.15</version>
+			<version>2.7.6</version>
 			<!-- pour JaninoExpressionEvaluatorPlugin -->
 		</dependency>
 				
