--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -61,6 +61,9 @@ limitations under the License. -->
 					<exclude>*.java</exclude>
 				</excludes>
 			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
 		</resources>
 
 		<testResources>
