--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -66,7 +66,7 @@
 		</dependency>
 		<dependency>
 			<groupId>cglib</groupId>
-			<artifactId>cglib</artifactId>
+			<artifactId>cglib-nodep</artifactId>
 			<version>3.1</version>
 		</dependency>
 	</dependencies>
