Fix resources.properties charset
Use ISO-8859-1 encoding as ResourceBundle only support this charset.
@see:
http://docs.oracle.com/javase/7/docs/api/java/util/PropertyResourceBundle.html#PropertyResourceBundle(java.io.InputStream)

--- a/vertigo-dynamo-impl/src/main/java/io/vertigo/dynamo/impl/database/DataBase.properties
+++ b/vertigo-dynamo-impl/src/main/java/io/vertigo/dynamo/impl/database/DataBase.properties
@@ -17,9 +17,12 @@
 # limitations under the License.
 #
 
+#Use ISO-8859-1 encoding as ResourceBundle only support this charset.
+#@see: http://docs.oracle.com/javase/7/docs/api/java/util/PropertyResourceBundle.html#PropertyResourceBundle(java.io.InputStream)
+
 # Value to big for field in database.
-DYNAMO_SQL_CONSTRAINT_TOO_BIG_VALUE =La valeur renseignÃ©e est trop grande pour Ãªtre enregistrÃ©e.
+DYNAMO_SQL_CONSTRAINT_TOO_BIG_VALUE =La valeur renseignée est trop grande pour être enregistrée.
 # Impossible to delete entry due to referential constraint.
-DYNAMO_SQL_CONSTRAINT_IMPOSSIBLE_TO_DELETE =L''Ã©lÃ©ment est rÃ©fÃ©rencÃ©, il ne peut pas Ãªtre supprimÃ©.
+DYNAMO_SQL_CONSTRAINT_IMPOSSIBLE_TO_DELETE =L''élément est référencé, il ne peut pas être supprimé.
 # Unicity constraint problem.
-DYNAMO_SQL_CONSTRAINT_ALREADY_REGISTRED =Cet Ã©lÃ©ment a dÃ©jÃ  Ã©tÃ© enregistrÃ©.
+DYNAMO_SQL_CONSTRAINT_ALREADY_REGISTRED =Cet élément a déjà été enregistré.
