--- a/vertigo-dynamo-impl/src/main/java/io/vertigo/dynamox/domain/constraint/Constraint.properties
+++ b/vertigo-dynamo-impl/src/main/java/io/vertigo/dynamox/domain/constraint/Constraint.properties
@@ -1,3 +1,6 @@
+#Use ISO-8859-1 encoding as ResourceBundle only support this charset.
+#@see: http://docs.oracle.com/javase/7/docs/api/java/util/PropertyResourceBundle.html#PropertyResourceBundle(java.io.InputStream)
+
 #Contrainte de longueur de chaine de caractères {longueur maximum}
 DYNAMO_CONSTRAINT_STRINGLENGTH_EXCEEDED =la taille doit être inférieure à {0} caractères.
 DYNAMO_CONSTRAINT_INTEGERLENGTH_EXCEEDED =la valeur doit être contenue dans les bornes suivantes ]{0}, {1}[.
