--- a/vertigo-vega-impl/pom.xml
+++ b/vertigo-vega-impl/pom.xml
@@ -117,5 +117,11 @@
 			<artifactId>je</artifactId>
 			<version>5.0.73</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+		</dependency> <!-- for io.vertigo.vega.impl.rest.multipart.ApacheMultipartHelper -->
 	</dependencies>
 </project>
