--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@ limitations under the License. -->
 		<module>vertigo-bundle</module>
 	</modules>
 
+	<scm>
+		<connection>scm:git:https://github.com/KleeGroup/vertigo.git</connection>
+		<developerConnection>scm:git:https://github.com/KleeGroup/vertigo.git</developerConnection>
+		<url>scm:git:https://github.com/KleeGroup/vertigo.git</url>
+		<tag>vertigo-0.5.1</tag>
+	</scm>
+	
 	<build>
 		<plugins>
 			<plugin>
